# nl2sql-openenv

./: Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  test_local.py
server/: README.md  __init__.py  app.py  database.py  environment.py  requirements.txt  tasks.py
